fix bug 932842 - Make nested list spacing consistent

--- a/media/redesign/stylus/classes.styl
+++ b/media/redesign/stylus/classes.styl
@@ -32,6 +32,15 @@
     }
   }
 
+  ul ul, ol ol, ul ol, ol ul {
+    margin-bottom: 0;
+    padding-top: 6px;
+  }
+
+  li:last-child {
+    padding-bottom: 0;
+  }
+
   ul, ol {
     padding-left: (grid-spacing * 2);
     margin-bottom: content-block-margin;
